k8s/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wetty
  template:
    metadata:
      labels:
        app: wetty
    spec:
      containers:
        - name: wetty
          image: butlerx/wetty:latest
          ports:
            - containerPort: 3000   # Wetty default port
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
