k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wetty
spec:
  selector:
    app: wetty
  ports:
    - port: 80
      targetPort: 3000   # Wetty container port
  type: ClusterIP
