k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tunnel.z-script.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          # New rule for Wetty
          - path: /terminal
            pathType: Prefix
            backend:
              service:
                name: wetty
                port:
                  number: 80
